k8s/cluster-resources/mutatingwebhookconfigurations.admissionregistration.k8s.io.yaml
apiVersion: v1
items:
- apiVersion: admissionregistration.k8s.io/v1
  kind: MutatingWebhookConfiguration
  metadata:
    annotations:
      meta.helm.sh/release-name: kube-prometheus
      meta.helm.sh/release-namespace: monitoring
    creationTimestamp: "2025-08-28T08:50:06Z"
    generation: 2
    labels:
      app: kube-prometheus-stack-admission
      app.kubernetes.io/component: prometheus-operator-webhook
      app.kubernetes.io/instance: kube-prometheus
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: kube-prometheus-stack-prometheus-operator
      app.kubernetes.io/part-of: kube-prometheus-stack
      app.kubernetes.io/version: 77.0.2
      chart: kube-prometheus-stack-77.0.2
      heritage: Helm
      release: kube-prometheus
    name: kube-prometheus-kube-prome-admission
    resourceVersion: "104801"
    uid: aaea8cab-fc66-4610-91e0-93a46a8f5b1d
  webhooks:
  - admissionReviewVersions:
    - v1
    - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJkakNDQVJ1Z0F3SUJBZ0lRUlZWSFhOdjNDNU1xdS95bjJ6WjZsekFLQmdncWhrak9QUVFEQWpBUE1RMHcKQ3dZRFZRUUtFd1J1YVd3eE1DQVhEVEkxTURneU9EQTRORFExT1ZvWUR6SXhNalV3T0RBME1EZzBORFU1V2pBUApNUTB3Q3dZRFZRUUtFd1J1YVd3eE1Ga3dFd1lIS29aSXpqMENBUVlJS29aSXpqMERBUWNEUWdBRWwzSnFxNHJVCjNJMW00dEJoeE1JbGFJUDMvdy9KMitKWm4ybFZIekVVallKK00rUEpNaGNnTG40MUE4ZUtFT1cycEs1bE1EejIKUkJjdjQwQjZ0Y1NSRXFOWE1GVXdEZ1lEVlIwUEFRSC9CQVFEQWdJRU1CTUdBMVVkSlFRTU1Bb0dDQ3NHQVFVRgpCd01CTUE4R0Ex [...]
      service:
        name: kube-prometheus-kube-prome-operator
        namespace: monitoring
        path: /admission-prometheusrules/mutate
        port: 443
    failurePolicy: Ignore
    matchPolicy: Equivalent
    name: prometheusrulemutate.monitoring.coreos.com
    namespaceSelector: {}
    objectSelector: {}
    reinvocationPolicy: Never
    rules:
    - apiGroups:
      - monitoring.coreos.com
      apiVersions:
      - '*'
      operations:
      - CREATE
      - UPDATE
      resources:
      - prometheusrules
      scope: '*'
    sideEffects: None
    timeoutSeconds: 10
kind: List
metadata:
  resourceVersion: ""
